jena-shex/src/test/files/spec/negativeSyntax/1iriLength2.shex
<http://a.example/IssueShape> {
   <http://a.example/p1> IRI LENGTH 20 LENGTH 21
}
